Correcciones menores en la gestión de textos